<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegunadaActivity">

    <TextView
        android:id="@+id/textView_notaMate"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:hint="@string/tv_matematicas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_notaFisi"
        android:layout_width="318dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:hint="@string/tv_fisi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_notaMate" />

    <TextView
        android:id="@+id/textView_notaQuimi"
        android:layout_width="302dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:hint="@string/tv_quimi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_notaFisi" />

    <TextView
        android:id="@+id/textView_Resultado"
        android:layout_width="295dp"
        android:layout_height="115dp"
        android:layout_marginTop="140dp"
        android:hint="@string/tv_resultado"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_notaQuimi"
        app:layout_constraintVertical_bias="0.32" />
</android.support.constraint.ConstraintLayout>